<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yashpalmeena.wifiexample.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_manager" />

    <Button
        android:id="@+id/enable_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:text="@string/enable_wifi" />

    <Button
        android:id="@+id/disable_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/enable_wifi"
        android:layout_below="@+id/enable_wifi"
        android:layout_marginTop="16dp"
        android:text="@string/disable_wifi" />

    <Button
        android:id="@+id/get_wifi_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/disable_wifi"
        android:layout_below="@+id/disable_wifi"
        android:layout_marginTop="16dp"
        android:text="@string/get_wifi_name" />

    <Button
        android:id="@+id/check_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/get_wifi_name"
        android:layout_below="@+id/get_wifi_name"
        android:layout_marginTop="16dp"
        android:onClick="testWifi"
        android:text="@string/is_connected" />

    <Button
        android:id="@+id/connect_meetingroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/check_connection"
        android:layout_below="@+id/check_connection"
        android:layout_marginTop="16dp"
        android:onClick="connectToMeetingRoom"
        android:text="@string/connect_to_meeting_room" />

</RelativeLayout>
